feat: delete/stop/cancel multiple recordings
